tests/scan/fixtures/validation/negative/clean_rubygems_clean_validator_gem/clean_validator_gem.gemspec
Gem::Specification.new do |s|
  s.name = "clean_validator_gem"
  s.version = "0.1.0"
  s.summary = "A clean Ruby gem: clean_validator_gem"
  s.authors = ["Example Author"]
end
